--- a/pom.xml
+++ b/pom.xml
@@ -19,11 +19,13 @@
 		<url>scm:git:ssh://git@github.com/javacc/javacc-8-js.git</url>
 		<tag>HEAD</tag>
 	</scm>
+	<issueManagement>
+		<system>GitHub</system>
+		<url>https://github.com/javacc/javacc-8-java/issues</url>
+	</issueManagement>
 	<properties>
 		<javacc.core>8.0.0</javacc.core>
 		<javacc.js>${project.version}</javacc.js>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 	<dependencyManagement>
 		<dependencies>
@@ -40,7 +42,6 @@
 			<artifactId>core</artifactId>
 		</dependency>
 	</dependencies>
-
 	<modules>
 		<module>it</module>
 		<module>js</module>
