--- a/it/pom.xml
+++ b/it/pom.xml
@@ -2,12 +2,16 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>org.javacc.generator</groupId>
-		<artifactId>js</artifactId>
-		<version>8.0.0-SNAPSHOT</version>
+		<groupId>org</groupId>
+		<artifactId>javacc</artifactId>
+		<version>8.0.5</version>
+		<relativePath></relativePath>
 	</parent>
 	<groupId>org.javacc.generator.js</groupId>
 	<packaging>pom</packaging>
+	<artifactId>it</artifactId>
+	<name>JavaCC default JavaScript code generator: it</name>
+	<description>JavaCC default JavaScript code generator: it</description>
 	<repositories>
 		<repository>
 			<id>dotnet-tools</id>
@@ -445,7 +449,4 @@
 			</build>
 		</profile>
 	</profiles>
-	<artifactId>it</artifactId>
-	<name>JavaCC default JavaScript code generator: it</name>
-	<description>JavaCC default JavaScript code generator: it</description>
 </project>
